--- a/station/src/Aevatar.HttpApi.Host/appsettings.json
+++ b/station/src/Aevatar.HttpApi.Host/appsettings.json
@@ -91,6 +91,12 @@
     "HostId": "Aevatar",
     "Version": "Version"
   },
+  "GoogleAnalytics": {
+    "MeasurementId": "G-XXXXXXXXXX",
+    "ApiSecret": "your-api-secret-here",
+    "EnableDebugMode": false,
+    "TimeoutSeconds": 10
+  },
   "Account": {
     "ResetPasswordUrl": "https://aevatar.ai/reset-password"
   },
