chore: remove tracked kubeconfig and add to .gitignore
- Remove sensitive kubeconfig file from git tracking
- Add kubeconfig patterns to .gitignore
- Kubeconfig is auto-generated by K3s during regression tests
- This prevents committing sensitive authentication credentials

--- a/.gitignore
+++ b/.gitignore
@@ -290,3 +290,9 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+# Kubernetes config files
+**/kubeconfig
+**/kubeconfig-*
+station/scripts/shared/kubeconfig
+station/scripts/shared/kubeconfig-*
+
