feat: report apple data to firebase

--- a/station/src/Aevatar.HttpApi.Host/appsettings.json
+++ b/station/src/Aevatar.HttpApi.Host/appsettings.json
@@ -97,6 +97,12 @@
     "EnableDebugMode": false,
     "TimeoutSeconds": 10
   },
+  "FirebaseAnalytics": {
+    "FirebaseAppId": "1:123456789:web:abcdefghijklmnop",
+    "ApiSecret": "your-firebase-api-secret-here",
+    "EnableAnalytics": false,
+    "TimeoutSeconds": 10
+  },
   "Account": {
     "ResetPasswordUrl": "https://aevatar.ai/reset-password"
   },
