--- a/station/src/Aevatar.HttpApi/Aevatar.HttpApi.csproj
+++ b/station/src/Aevatar.HttpApi/Aevatar.HttpApi.csproj
@@ -20,6 +20,7 @@
       <PackageReference Include="Volo.Abp.Identity.HttpApi" />
       <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" />
       <PackageReference Include="Volo.Abp.AspNetCore.SignalR" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" />
   </ItemGroup>
 
 </Project>
