--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -9,7 +9,7 @@
   <ItemGroup>
     <PackageVersion Include="GodGPT.GAgents" Version="1.25.0-alpha-7" />
     <PackageVersion Include="Stripe.net" Version="48.1.0"/>
-    <PackageVersion Include="GodGPT.Webhook" Version="1.25.0-alpha-" />
+    <PackageVersion Include="GodGPT.Webhook" Version="1.25.0-alpha-7" />
     <!-- AElf packages -->
     <PackageVersion Include="AElf.Client" Version="1.1.0" />
     <PackageVersion Include="AElf.ExceptionHandler.ABP" Version="8.2.8" />
