feat: add unit tests for CreateDefaultWorkflowAsync method

--- a/station/src/Aevatar.Silo/appsettings.json
+++ b/station/src/Aevatar.Silo/appsettings.json
@@ -122,7 +122,7 @@
     "AccessToken": ""
   },
   "OrleansStream": {
-    "Provider": "Kafka",
+    "Provider": "Memory",
     "Brokers": [
       "127.0.0.1:9092"
     ],
