--- a/.github/workflows/performance-benchmarks.yml
+++ b/.github/workflows/performance-benchmarks.yml
@@ -273,7 +273,17 @@ jobs:
           p95=$(jq -r '.p95' broadcast_metrics.json)
           etp=$(jq -r '.expectedThroughput' broadcast_metrics.json)
 
-          echo "Broadcast metrics: successRate=$sr throughput=$tp avg=$avg p95=$p95 expectedThroughput=$etp"
+          # Format and display broadcast results
+          echo "📊 Broadcast Latency Benchmark Results:"
+          printf "   ✅ Success Rate: %.1f%% (target: ≥%.1f%%)\n" $(echo "$sr * 100" | bc -l) $(echo "$BCAST_SUCCESS_RATE * 100" | bc -l)
+          printf "   ⚡ Throughput: %.1f events/sec" $tp
+          if [ "${etp}" != "null" ] && [ "${etp}" != "0" ]; then
+            printf " (target: ≥%.1f events/sec)" $(echo "$etp * $BCAST_THROUGHPUT_FACTOR" | bc -l)
+          fi
+          echo ""
+          printf "   ⏱️  Avg Latency: %.1fms (target: ≤%sms)\n" $avg $BCAST_AVG_MS
+          printf "   📈 P95 Latency: %.1fms (target: ≤%sms)\n" $p95 $BCAST_P95_MS
+          echo ""
 
           fail=0
           awk -v a="$sr" -v b="$BCAST_SUCCESS_RATE" 'BEGIN{ if (a+0 < b+0) exit 1 }' || { echo "❌ Broadcast successRate below $BCAST_SUCCESS_RATE"; fail=1; }
@@ -284,7 +294,10 @@ jobs:
           awk -v a="$p95" -v b="$BCAST_P95_MS" 'BEGIN{ if (a+0 > b+0) exit 1 }' || { echo "❌ Broadcast P95 latency above $BCAST_P95_MS ms"; fail=1; }
 
           if [ "$fail" -ne 0 ]; then
-            echo "Broadcast thresholds not met"; exit 1; fi
+            echo "🚫 Broadcast benchmark failed threshold checks"; exit 1
+          else
+            echo "✅ Broadcast benchmark passed all thresholds"
+          fi
 
       - name: Parse and check thresholds - Latency
         id: check_latency
@@ -315,7 +328,22 @@ jobs:
           pratio=$(jq -r '.processedRatio' latency_metrics.json)
           etp=$(jq -r '.expectedThroughput' latency_metrics.json)
 
-          echo "Latency metrics: success=$succ throughput=$tp p95=$p95 p99=$p99 processedRatio=$pratio expectedThroughput=$etp"
+          # Format and display latency results
+          echo "📊 Latency Benchmark Results:"
+          if [ "$succ" = "true" ]; then
+            echo "   ✅ Execution Status: SUCCESS"
+          else
+            echo "   ❌ Execution Status: FAILED"
+          fi
+          printf "   ⚡ Throughput: %.1f events/sec" $tp
+          if [ "${etp}" != "null" ] && [ "${etp}" != "0" ]; then
+            printf " (target: ≥%.1f events/sec)" $(echo "$etp * $LAT_THROUGHPUT_FACTOR" | bc -l)
+          fi
+          echo ""
+          printf "   📈 P95 Latency: %.1fms (target: ≤%sms)\n" $p95 $LAT_P95_MS
+          printf "   📊 P99 Latency: %.1fms (target: ≤%sms)\n" $p99 $LAT_P99_MS
+          printf "   🎯 Processed Ratio: %.1f%% (target: ≥%.1f%%)\n" $(echo "$pratio * 100" | bc -l) $(echo "$LAT_PROCESSED_RATIO * 100" | bc -l)
+          echo ""
 
           fail=0
           if [ "$succ" != "true" ]; then echo "❌ Latency result marked unsuccessful"; fail=1; fi
@@ -327,21 +355,54 @@ jobs:
           awk -v a="$pratio" -v b="$LAT_PROCESSED_RATIO" 'BEGIN{ if (a+0 < b+0) exit 1 }' || { echo "❌ Latency processed ratio below $LAT_PROCESSED_RATIO"; fail=1; }
 
           if [ "$fail" -ne 0 ]; then
-            echo "Latency thresholds not met"; exit 1; fi
+            echo "🚫 Latency benchmark failed threshold checks"; exit 1
+          else
+            echo "✅ Latency benchmark passed all thresholds"
+          fi
 
       - name: Write Job Summary
         if: always()
         shell: bash
         run: |
-          echo "### Performance Benchmarks" >> $GITHUB_STEP_SUMMARY
-          echo "- Broadcast and Latency benchmarks executed" >> $GITHUB_STEP_SUMMARY
+          echo "## 🚀 Performance Benchmarks Report" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          
           if [ -f broadcast_metrics.json ]; then
-            echo "\n**Broadcast (key metrics)**" >> $GITHUB_STEP_SUMMARY
-            jq -r 'to_entries | map("- **\(.key)**: \(.value)") | .[]' broadcast_metrics.json >> $GITHUB_STEP_SUMMARY
+            sr=$(jq -r '.successRate' broadcast_metrics.json)
+            tp=$(jq -r '.throughput' broadcast_metrics.json)
+            avg=$(jq -r '.avg' broadcast_metrics.json)
+            p95=$(jq -r '.p95' broadcast_metrics.json)
+            
+            echo "### 📊 Broadcast Latency Benchmark" >> $GITHUB_STEP_SUMMARY
+            echo "| Metric | Value | Target |" >> $GITHUB_STEP_SUMMARY
+            echo "|--------|-------|--------|" >> $GITHUB_STEP_SUMMARY
+            echo "| Success Rate | $(printf "%.1f%%" $(echo "$sr * 100" | bc -l)) | ≥$(echo "$BCAST_SUCCESS_RATE * 100" | bc -l)% |" >> $GITHUB_STEP_SUMMARY
+            echo "| Throughput | $(printf "%.1f" $tp) events/sec | ≥$(echo "$BCAST_THROUGHPUT_FACTOR * 100" | bc -l)% of expected |" >> $GITHUB_STEP_SUMMARY
+            echo "| Avg Latency | $(printf "%.1f" $avg)ms | ≤${BCAST_AVG_MS}ms |" >> $GITHUB_STEP_SUMMARY
+            echo "| P95 Latency | $(printf "%.1f" $p95)ms | ≤${BCAST_P95_MS}ms |" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
           fi
+          
           if [ -f latency_metrics.json ]; then
-            echo "\n**Latency (key metrics)**" >> $GITHUB_STEP_SUMMARY
-            jq -r 'to_entries | map("- **\(.key)**: \(.value)") | .[]' latency_metrics.json >> $GITHUB_STEP_SUMMARY
+            succ=$(jq -r '.success' latency_metrics.json)
+            tp=$(jq -r '.throughput' latency_metrics.json)
+            p95=$(jq -r '.p95' latency_metrics.json)
+            p99=$(jq -r '.p99' latency_metrics.json)
+            pratio=$(jq -r '.processedRatio' latency_metrics.json)
+            
+            echo "### ⚡ Latency Benchmark" >> $GITHUB_STEP_SUMMARY
+            echo "| Metric | Value | Target |" >> $GITHUB_STEP_SUMMARY
+            echo "|--------|-------|--------|" >> $GITHUB_STEP_SUMMARY
+            if [ "$succ" = "true" ]; then
+              echo "| Status | ✅ SUCCESS | ✅ SUCCESS |" >> $GITHUB_STEP_SUMMARY
+            else
+              echo "| Status | ❌ FAILED | ✅ SUCCESS |" >> $GITHUB_STEP_SUMMARY
+            fi
+            echo "| Throughput | $(printf "%.1f" $tp) events/sec | ≥$(echo "$LAT_THROUGHPUT_FACTOR * 100" | bc -l)% of expected |" >> $GITHUB_STEP_SUMMARY
+            echo "| P95 Latency | $(printf "%.1f" $p95)ms | ≤${LAT_P95_MS}ms |" >> $GITHUB_STEP_SUMMARY
+            echo "| P99 Latency | $(printf "%.1f" $p99)ms | ≤${LAT_P99_MS}ms |" >> $GITHUB_STEP_SUMMARY
+            echo "| Processed Ratio | $(printf "%.1f%%" $(echo "$pratio * 100" | bc -l)) | ≥$(echo "$LAT_PROCESSED_RATIO * 100" | bc -l)% |" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
           fi
 
       - name: Upload artifacts
